# multi-agent-reference

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
docs/: architecture.md
docs/adr/: 001-langgraph-vs-autogen.md  002-mcp-as-tool-protocol.md  003-multi-provider-strategy.md
helm/multi-agent/: Chart.yaml  values.yaml
helm/multi-agent/templates/: deployment.yaml  hpa.yaml  service.yaml
infra/aws/: main.tf
infra/azure/: main.bicep
src/magent/: __init__.py  cli.py  runtime.py
src/magent/agents/: __init__.py  critic.py  planner.py  researcher.py  writer.py
src/magent/api/: main.py
src/magent/config/: settings.py
src/magent/eval/: __init__.py  baseline.json  cli.py  dataset.py  harness.py  metrics.py
src/magent/eval/datasets/: golden.json
src/magent/graph/: orchestrator.py  state.py
src/magent/guardrails/: __init__.py  base.py  heuristic.py  orchestrator.py
src/magent/mcp_servers/: __init__.py  server.py  tools.py
src/magent/observability/: __init__.py  tracing.py
src/magent/providers/: __init__.py  _anthropic_base.py  anthropic.py  base.py  bedrock.py  foundry.py  mock.py  router.py  vertex.py
src/magent/tools/: __init__.py  mcp_client.py  registry.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_anthropic_provider.py  test_eval.py  test_guardrails.py  test_mcp_client.py  test_mcp_tools.py  test_provider_adapters.py  test_providers.py  test_routing.py  test_state.py  test_tools.py  test_tracing.py
