[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magent"
version = "0.1.0"
description = "Production-grade, provider-agnostic multi-agent reference architecture."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jean Malaquias" }]
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
magent = "magent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/magent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["src/magent"]
